invoice-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:	invoices
  labels:
    app: invoice-app
    name: production
