invoice-app/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoice-app-loadbalander
spec:
  selector:
    app: invoice-app
  ports:
    - port: 8081
  type: LoadBalancer
