invoice-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoice-app-loadbalander
  labels:
    app: invoice-app
    instance: $INSTANCE
    tier: frontend
spec:
  selector:
    app: invoice-app
    instance: $INSTANCE
  ports:
    - port: 8081
      targetPort: 8081
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: payment-app-endpoint
  labels:
    app: invoice-app
    instance: $INSTANCE
    tier: frontend
spec:
  externalName: payment-provider.payment-provider.svc.cluster.local
  ports:
    - port: 8082
  type: ExternalName
