invoice-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoice-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: invoice-app-backend
      port:
        number: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: invoice-app-backend
spec:
  type: NodePort
  selector:
    app: invoice-app
  ports:
    - port: 8081
      targetPort: 8081
